create auth + routerguards + nav + fix some bugs

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 :root {
-  --main_Bg_Color: #eee;
+  --main_Bg_Color: #fff;
   --main_color_1: #3e1f47;
+  --main_color_2: #707070;
+  --main_color_3: #85b44a;
+  --border_color: #dcdcdca3;
 
   &.darkTheme {
   }
