--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -18,18 +18,28 @@
 }
 
 // Primary Head
-.heading-primary {
+.h_1 {
 }
 
 // Secondary Head
-.heading-secondary {
+.h_2 {
 }
 
 //Heading tertiary
-.heading-tertiary {
+.h_3 {
+  font-size: 20px;
 }
 
-.paragraph {
+.h_4 {
+  font-size: 15px;
+}
+
+.para {
+}
+
+._title {
+  font-size: 15px;
+  color: gray;
 }
 
 .iziToast-message {
